--- a/public/index.css
+++ b/public/index.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Inter", sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f3f3f3;
@@ -14,16 +15,22 @@ h1 {
 .card-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .card {
-    width: 300px;
-    margin: 20px;
+    width: 350px;
+    margin: 25px 25px 20px 40px;
     padding: 15px;
     background-color: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+}
+#carro-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
 }
 
 .card h2 {
@@ -38,5 +45,5 @@ h1 {
 }
 
 .card p {
-    margin: 5px 0;
+    margin: 5px 8px;
 }
